--- a/modulo1/cookenu/package.json
+++ b/modulo1/cookenu/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@material-ui/core": "file:.4.11.3",
     "@material-ui/icons": "file:.4.11.2",
+    "@mui/base": "^5.0.0-alpha.87",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
