--- a/case2/backend/package.json
+++ b/case2/backend/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/knex": "^0.16.1",
     "@types/node": "^18.8.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
@@ -14,8 +18,10 @@
     "@types/express": "^4.17.14"
   },
   "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "build": "tsc"
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "dev": "ts-node-dev ./src/index.ts",
+    "migrations": "tsc && node ./build/database/migrations/Migrations.js"
   },
   "author": "Victor Ramon",
   "license": "ISC"
