--- a/case2/backend/package.json
+++ b/case2/backend/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "backend",
+  "name": "projeto-backend-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "@types/knex": "^0.16.1",
-    "@types/node": "^18.8.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "knex": "^2.3.0",
-    "mysql": "^2.18.1",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14"
-  },
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc",
     "dev": "ts-node-dev ./src/index.ts",
     "migrations": "tsc && node ./build/database/migrations/Migrations.js"
   },
-  "author": "Victor Ramon",
-  "license": "ISC"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^18.0.6",
+    "@types/uuid": "^8.3.4",
+    "@types/bcryptjs": "^2.4.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.2.0",
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
+  }
 }
